# apidef/oas/schema/x-tyk-api-gateway.json
@@ -1277,19 +1277,6 @@
         },
         "detailedTracing": {
           "$ref": "#/definitions/X-Tyk-DetailedTracing"
-        },
-<<<<<<< HEAD
-        "contextVariables": {
-          "$ref": "#/definitions/X-Tyk-ContextVariables"
-=======
-        "eventHandlers": {
-          "type": "array",
-          "items": [
-            {
-              "$ref": "#/definitions/X-Tyk-EventHandlers"
-            }
-          ]
->>>>>>> 63963725d... [TT-11954/TT-12115]fix location of contextVariables (#6285)
         }
       },
       "required": [
